<resources>
    <string name="app_name">倾旅</string>
    <string name="my">我的</string>
    <string name="message">消息</string>
    <string name="add">增加</string>
    <string name="shop">商店</string>
    <string name="main">首页</string>
    <string name="todo">TODO</string>
    <string name="title">加个标题会有更多赞哦~</string>
    <string name="mood">说说此刻的心情</string>
    <string name="share">发布笔记</string>
    <string name="photograph">拍摄</string>
    <string name="photo">相册</string>
    <string name="cancel">取消</string>
    <string name="comment">评分</string>
    <string name="text_view">TextView</string>
    <string name="no_picture">no picture</string>
    <string name="author_name">作者名字</string>
    <string name="content">我是文章内容</string>
    <string name="tittle">这里是标题</string>
    <string name="time">2000.00.00</string>
    <string name="user_name">该用户没有昵称</string>
    <string name="note_type">游记种类</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="comment_content">说点什么呢...</string>
    <string name="imageDetail">图片详情</string>
    <string name="travelPreview">该游记没有标题</string>
    <string name="_0">0</string>
</resources>
