<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="4dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView
            android:id="@+id/imageView_item_travel_preview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/no_picture"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_no_img" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/no_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_travel_preview"
            app:srcCompat="@drawable/img_heart" />

        <TextView
            android:id="@+id/textView_item_travel_heart"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="3dp"
            android:text="@string/_0"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView_item_travel_tittle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/travelPreview"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_item_travel_userName"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_travel_preview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_item_travel_userName"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/user_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_item_travel_heart"
            app:layout_constraintStart_toEndOf="@+id/imageView_travel_userHead" />

        <ImageView
            android:id="@+id/imageView_travel_userHead"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_travel_preview"
            app:srcCompat="@drawable/img_head"
            android:contentDescription="@string/text_view" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>