<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="4dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView_item_scenic_preview"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/no_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_head" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/no_picture"
            app:layout_constraintBottom_toTopOf="@+id/textView_item_scenic_location"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_scenic_preview"
            app:srcCompat="@drawable/img_comment" />

        <TextView
            android:id="@+id/textView_item_scenic_comment"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"

            android:text="@string/text_view"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_item_scenic_location"
            app:layout_constraintStart_toEndOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView_item_scenic_tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/text_view"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_scenic_preview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/no_picture"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_scenic_preview"
            app:layout_constraintTop_toTopOf="@+id/textView_item_scenic_location"
            app:srcCompat="@drawable/img_location" />

        <TextView
            android:id="@+id/textView_item_scenic_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_view"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="36dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/comment"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_scenic_preview" />

        <TextView
            android:id="@+id/textView_item_scenic_score"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_view"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>


